--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Xu's Website
 description: xiao xu de pg website 
+logo:https://upload-images.jianshu.io/upload_images/6753590-bb0c115e3202331f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
